tidy up documentations
