# utils/docs/swagger.json
@@ -53,6 +53,7 @@
                 }
             },
             "post": {
+                "description": "Sample Payload: \u003cbr\u003e `{ `\u003cbr\u003e` \"title\": \"Fix Bugs\", `\u003cbr\u003e` \"description\": \"fix multiple bugs in dev\", `\u003cbr\u003e` \"startDate\": \"2024-12-05T00:00:00Z\", `\u003cbr\u003e` \"deadline\": \"2024-12-07T00:00:00Z\" `\u003cbr\u003e` }`",
                 "consumes": [
                     "application/json"
                 ],
@@ -123,22 +124,7 @@
                     "500": {
                         "description": "Failed to create task",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/utils.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "status": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/utils.HTTPError"
                         }
                     }
                 }
@@ -208,22 +194,7 @@
                     "500": {
                         "description": "Failed to fetch task",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/utils.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string"
-                                        },
-                                        "status": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/utils.HTTPError"
                         }
                     }
                 }
@@ -300,6 +271,7 @@
                 }
             },
             "patch": {
+                "description": "Sample Payload (only send the ones you want to update): \u003cbr\u003e `{ `\u003cbr\u003e` \"description\": \"fix lots of bugs\", `\u003cbr\u003e` \"completed\": true, `\u003cbr\u003e` \"startDate\": \"2024-12-05T00:00:00Z\", `\u003cbr\u003e` \"deadline\": \"2024-12-07T00:00:00Z\" `\u003cbr\u003e` }`",
                 "consumes": [
                     "application/json"
                 ],
